    configure works, except FoX: use script install/build_fox_with_pgi.sh
  * ParO and PPCG iterative diagonalization algorithms
  * Fourier interpolation of phonon potential implemented in ph.x
    (Jae-Mo Lihm, Seoul Natl. Univ.)
  * DFT+U+V in pw.x, J. Phys.: Condens. Matter 22, 055602 (2010)
    (V.L. Campo Jr, I. Timrov, N. Marzari, M. Cococcioni)
  * Support for BEEF-vdW XC (Gabriel S. Gusmão, Georgia Tech)
  
Fixed in dev branch:
  * PW: Restart from interrupted calculations  simplified. As a side effect,
    NEB restart now works again
  * A few LIBXC glitches
  * Fermi energy incorrectly written to xml file in 'bands' calculation
    (did not affect results, just Fermi energy position in band plotting)
    Also: Fermi energy always written to xml file, also for insulators
  * Phonon code in the noncolinear case with magnetization ("domag" case)
    now works properly - courtesy Andrea Urru and Andrea Dal Corso.
  * Incorrect forces, and slightly inconsistent atomic positions, were
    written to xml file for structural optimization and molecular dynamics
  * Some Bravais lattices with special axis orientations were not correctly
    written to xml file, leading to errors in some codes (e.g., thermo_pw)
    using that piece of information (fixed by Alberto Otero de la Roza)
 
Incompatible changes in dev branch:
  * Conversion from 1D FFT real-space index to 3D positions moved into a
    small routine for all cases where such conversion is used
  * CP: atomic positions are now in array tau(1:3,1:nat), information on the
    type of atom is in array ityp(:). The logic is now the same as for all
    other codes and there is no need to re-order atoms or to put ultrasoft
    pseudopotentials first, non-conserving second.
  * Calls to LAXlib routines changed: module to be included replaced by file
    'laxlib.fh', descriptors replaced by integer values
  * Interpolation table for Q(G) is in a.u. and no longer in 2pi/a units

New in 6.5 branch: